# CleanType

./: LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
docs/: index.html
docs/downloads/: CleanType_0.1.0_x64_en-US.msi
public/: manifest.json
src/: App.css  App.module.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ConfirmDialog.module.css  ConfirmDialog.tsx  ErrorBoundary.tsx  FullscreenEditor.module.css  FullscreenEditor.tsx  HistoryPanel.module.css  HistoryPanel.tsx  KeyboardShortcuts.module.css  KeyboardShortcuts.tsx  LoadingSpinner.module.css  LoadingSpinner.tsx  ThemeToggle.module.css  ThemeToggle.tsx  Timer.module.css  Timer.tsx  TimerComplete.module.css  TimerComplete.tsx  Toast.module.css  TodoPanel.module.css  TodoPanel.tsx
src/styles/: theme.css
src/types/: tauri.d.ts
